@@ -15,21 +15,22 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 1.03
-Acme::Alien::DontPanic2                        = 1.2900
-Acme::Ford::Prefect                            = 1.03
-Acme::Ford::Prefect2                           = 1.4100
-Acme::Ford::Prefect::FFI                       = 0.30
+Acme::Alien::DontPanic                         = 2.1100
+Acme::Alien::DontPanic2                        = 2.1100
+Acme::Ford::Prefect                            = 2.1100
+Acme::Ford::Prefect2                           = 2.1100
+Acme::Ford::Prefect::FFI                       = 2.1100
+Acme::Ford::Prefect2::FFI                      = 2.1100
 Alien                                          = 0.95
 Alien::Alien                                   = 0.02
-Alien::autoconf                                = 0.14
-Alien::automake                                = 0.14
-Alien::Autotools                               = 1.04
-Alien::Base::ModuleBuild                       = 1.08
-Alien::bison                                   = 0.20
-Alien::Build                                   = 1.94
+Alien::autoconf                                = 0.16
+Alien::automake                                = 0.15
+Alien::Autotools                               = 1.05
+Alien::Base::ModuleBuild                       = 1.14
+Alien::bison                                   = 0.21
+Alien::Build                                   = 2.15
 Alien::Build::Git                              = 0.08
-Alien::Build::MB                               = 0.05
+Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
 Alien::Build::Plugin::Download::GitHub         = 0.05
 Alien::Build::Plugin::Fetch::Cache             = 0.04
@@ -40,32 +41,33 @@ Alien::Build::Plugin::Fetch::Rewrite           = 0.02
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.11
 Alien::cmake3                                  = 0.05
-Alien::curl                                    = 0.06
-Alien::Editline                                = 0.08
+Alien::curl                                    = 0.07
+Alien::Editline                                = 0.09
 Alien::Expat                                   = 0.01
-Alien::FFI                                     = 0.24
-Alien::flex                                    = 0.12
+Alien::FFI                                     = 0.25
+Alien::flex                                    = 0.14
 Alien::gmake                                   = 0.21
 Alien::GMP                                     = 1.14
-Alien::gzip                                    = 0.05
-Alien::Hunspell                                = 0.11
+Alien::gzip                                    = 0.06
+Alien::help2man                                = 0.01
+Alien::Hunspell                                = 0.15
 Alien::Libarchive3                             = 0.29
 Alien::Libbz2                                  = 0.24
 Alien::Librdkafka                              = 1.02
 Alien::LibreSSL                                = 0.03
 Alien::libuuid                                 = 0.02
-Alien::libtool                                 = 0.12
+Alien::libtool                                 = 0.14
 Alien::LibYAML                                 = 2.05
-Alien::Libxml2                                 = 0.12
+Alien::Libxml2                                 = 0.14
 Alien::LZO                                     = 0.02
-Alien::m4                                      = 0.17
-Alien::MSYS                                    = 0.09
+Alien::m4                                      = 0.19
+Alien::MSYS                                    = 0.14
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.22
 Alien::Nettle                                  = 0.04
 Alien::nragent                                 = 0.06
-Alien::patch                                   = 0.14
-Alien::pkgconf                                 = 0.15
+Alien::patch                                   = 0.15
+Alien::pkgconf                                 = 0.16
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
@@ -74,7 +76,7 @@ Alien::xz                                      = 0.06
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::Raw::FFI                            = 0.02
-AnyEvent::Finger                               = 0.10
+AnyEvent::Finger                               = 0.11
 AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.87
@@ -86,6 +88,7 @@ App::Prove::Plugin::TermTableStty              = 0.03
 App::pwhich                                    = 1.16
 App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.07
+App::supertouch                                = 0.02
 App::whichdll                                  = 0.03
 Archive::Ar::Libarchive                        = 2.07
 Archive::Libarchive::Any                       = 0.0900
@@ -94,9 +97,8 @@ Archive::Libarchive::XS                        = 0.0902
 Browser::Start                                 = 0.01
 Class::Inspector                               = 1.36
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.29
+Dist::Zilla::Plugin::AlienBuild                = 0.30
 Dist::Zilla::Plugin::Alt                       = 0.07
-Dist::Zilla::Plugin::Author::Plicease          = 2.38
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::FFI                       = 1.04
@@ -106,13 +108,13 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.38
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.44
 Env::ShellWords                                = 0.02
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
-FFI::CheckLib                                  = 0.25
+FFI::CheckLib                                  = 0.26
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 1.06
+FFI::Platypus                                  = 1.10
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.10
@@ -128,7 +130,7 @@ File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.09
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.23
-Kafka::Librd                                   = 0.14
+Kafka::Librd                                   = 0.15
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.52
@@ -140,7 +142,7 @@ Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.23026
 PkgConfig::LibPkgConf                          = 0.10
-Shell::Config::Generate                        = 0.33
+Shell::Config::Generate                        = 0.34
 Shell::Guess                                   = 0.09
 String::Template                               = 0.21
 Term::Clui                                     = 1.76
@@ -151,7 +153,7 @@ Test::Exec                                     = 0.04
 Test::Fixme                                    = 0.16
 Test::Script                                   = 1.25
 Test::Version                                  = 2.09
-Test2::Plugin::FauxHomeDir                     = 0.05
+Test2::Plugin::FauxHomeDir                     = 0.06
 Test2::Tools::FFI                              = 0.05
 Test2::Tools::HTTP                             = 0.09
 Test2::Tools::HTTP::UA::Mojo                   = 0.04
@@ -166,6 +168,7 @@ Win32::ErrorMode                               = 0.06
 Win32::Getppid                                 = 0.05
 Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.03
+Win32::Vcpkg                                   = 0.03
 Win32API::ProcessStatus                        = 0.05
 WWW::Bugzilla::BugTree                         = 0.08
 
