@@ -1,8 +1,14 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Updated my dists to latest
   - Added Alien::libuv
   - Altered exclusion logic for MSWin32 (mainly to account for Visual C++ + vcpkg)
+  - Added Win32::Vcpkg
+  - Added Acme::Ford::Prefect2::FFI
+  - Added App::supertouch
+  - Added Alien::help2man
+  - Removed Dist::Zilla::Plugin::Author::Plicease (now reunited with Dist::Zilla::PluginBundle::Author::Plicease)
 
 2.14      2019-12-16 12:21:02 -0700
   - Updated my dists to latest
